# rusoda

./: .env  .gitignore  Cargo.toml  README.md
schema/: schema.sql
src/: _main.rs  cache.rs  constants.rs  dataservice.rs  db.rs  envconfig.rs  github_utils.rs  helper_macros.rs  i18n.rs  lib.rs  main.rs  middleware.rs  model.rs  page.rs  page0.rs  page_forum_bin.rs  rss.rs  util.rs  web_filters.rs
src/api/: article_api.rs  comment_api.rs  section_api.rs
src/dataservice/: article.rs  comment.rs  section.rs  user.rs
src/page/: article_page.rs  comment_page.rs  index.rs  index_page.rs  section_page.rs  user_page.rs
src/page_forum/: article_page.rs  comment_page.rs  index_page.rs  section_page.rs  user_page.rs
static/css/: base.css
tomls/: i18n.toml
views/: article.html  base.html  edit_article.html  edit_comment.html  edit_section.html  header.html  index.html  login.html  new_article.html  new_comment.html
views/forum/: arrange_sections.html  article.html  base.html  delete_article.html  delete_comment.html  edit_article.html  edit_comment.html  edit_section.html  footer.html  header.html  index.html  login_with3rd.html  login_with_admin.html  new_article.html  new_comment.html  new_section.html  section.html
