[package]
name = "rusoda"
version = "0.1.0"
authors = ["Daogang Tang <daogangtang@live.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.6.0"
dotenv = "0.13.0"
rand = "^0.3.17"
lazy_static = "1.3"
uuid = {features = ["serde", "v4"], version = "0.5.1"}
chrono = {features = ["serde"], version = "0.4"}
rustorm = {path = "../rustorm", features = ["with-postgres"]}
rustorm_dao = {path = "../rustorm/dao"}
rustorm_codegen = {path = "../rustorm/codegen"}
redis = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_urlencoded = "0.5"
ammonia = "2.1"
tiny-keccak = "^1.3.1"
hyper-native-tls = "^0.2.4"
hyper = "^0.10.13"
comrak = "0.6"
toml = "0.4.10"
toml-query = "0.8.0"
rss = "1.6"
sapper = {path = "../sapper/"}
#sapper_std = {path = "../sapper/library/sapper_std", features=["monitor"]}
sapper_std = {path = "../sapper/library/sapper_std"}
